# driconfig

./: .gitignore  .pre-commit-config.yaml  .pre-commit-sync.json  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  tox.ini  versions.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: bump.yml  docs.yml  lint.yml  publish.yml  release.yml  test.yml
1.0/: 404.html  index.html  sitemap.xml
1.0/contribute/: index.html
1.0/install/: index.html
1.0/usage/configdict/: index.html
1.0/usage/introduction/: index.html
1.0/usage/nested_models/: index.html
1.1/: 404.html  index.html  sitemap.xml
1.1/contribute/: index.html
1.1/install/: index.html
1.1/search/: search_index.json
1.1/usage/configdict/: index.html
1.1/usage/introduction/: index.html
1.1/usage/nested_models/: index.html
1.2/: 404.html  index.html  sitemap.xml
1.2/contribute/: index.html
1.2/install/: index.html
1.2/search/: search_index.json
1.2/usage/configdict/: index.html
1.2/usage/introduction/: index.html
1.2/usage/nested_models/: index.html
contribute/: index.html
docs/: contribute.md  index.md  install.md
docs/usage/: config.md  configdict.md  intro.md  introduction.md  nested_models.md
driconfig/: __init__.py
install/: index.html
scripts/: bump-version.sh  lint.sh  publish.sh  test.sh
search/: search_index.json
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_driconfig.py  utils.py
tests/config/: config.yaml  config_non_mapping.yaml  config_non_str.yaml  config_prefix.yaml
usage/config/: index.html
usage/configdict/: index.html
usage/intro/: index.html
usage/introduction/: index.html
usage/nested_models/: index.html
