[tool.poetry]
name = "driconfig"
version = "1.0.4"
description = "Pydantic-ish YAML configuration management."
license = "MIT"
authors = ["Dribia Data Research <code@dribia.com>"]
maintainers = ["Dribia Data Research <code@dribia.com>"]
readme = "README.md"
homepage = "https://dribia.github.io/driconfig"
repository = "https://github.com/dribia/driconfig"
documentation = "https://dribia.github.io/driconfig"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pyyaml = "^6.0"
pydantic-settings = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.5.0"

[tool.poetry.group.ci.dependencies]
setuptools = "^75.3.2"

[tool.poetry.group.lint.dependencies]
ruff = "0.11.0"
mypy = "1.14.1"
types-pyyaml = "^6.0.12"

[tool.poetry.group.test.dependencies]
pytest = ">=7.2.2,<9.0.0"
pytest-mock = "^3.10.0"
pytest-cov = ">=4,<6"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.6.9"
mike = "^2.1.3"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # convention
    "B",  # flake8-bugbear
    "D",  # pydocstyle
    "UP",  # pyupgrade
    "N",  # pep8-naming
    "NPY",  # numpy
    "PD",   # pandas
    "RUF",  # ruff
    "PTH",  # pathlib
    "SIM",  # simplify
    "RET",  # return
    "RSE",  # raise
    "Q",  # quotes
    "G",  # logging-format
    "LOG",  # logging
    "ISC",  # implicit str concat
    "C4",  # comprehensions
    "COM",  # commas
    "TD",  # to-do
    "INT",  # gettext
    "TRY",  # tryceratops
    "TID",  # tidy imports
]
ignore = [
    "C901",  # function is too complex
    "N805",  # allow naming `self` to first class argument
    "RUF013",  # implicit optional
    "ISC001",  # allow implicit str concat
    "COM812",  # allow missing trailing comma
    "TRY003",  # allow long messages outside the exception class
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
plugins = ["pydantic.mypy"]
strict_optional = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
