[project]
name = "driconfig"
version = "1.2.0"
description = "Pydantic-ish YAML configuration management."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
authors = [{ name = "Dribia Data Research", email = "code@dribia.com" }]
maintainers = [{ name = "Dribia Data Research", email = "code@dribia.com" }]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "pydantic-settings>=2.0.1,<3",
  "pyyaml~=6.0",
]

[project.urls]
Documentation = "https://dribia.github.io/driconfig"
Homepage = "https://dribia.github.io/driconfig"
Repository = "https://github.com/dribia/driconfig"

[dependency-groups]
dev = [
  "prek>=0.3.3,<1",
]
ci = [
  "setuptools>=80.9.0,<82",
]
docs = [
  "mike>=2.1.3,<3",
  "mkdocs>=1.4.2,<2",
  "mkdocs-material>=9.6.14,<10",
]
lint = [
  "ruff==0.15.1",
  "tombi==0.7.28",
  "ty==0.0.17",
  "types-pyyaml>=6.0.12,<7",
]
test = [
  "pytest>=7.2.2,<9.0.0",
  "pytest-cov>=7.0.0,<8",
  "pytest-mock>=3.14.1,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
include = [
  "pyproject.toml",
  "driconfig/**/*.py",
  "tests/**/*.py",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # convention
  "B",  # flake8-bugbear
  "D",  # pydocstyle
  "UP",  # pyupgrade
  "N",  # pep8-naming
  "NPY",  # numpy
  "PD",  # pandas
  "RUF",  # ruff
  "PTH",  # pathlib
  "SIM",  # simplify
  "RET",  # return
  "RSE",  # raise
  "Q",  # quotes
  "G",  # logging-format
  "LOG",  # logging
  "ISC",  # implicit str concat
  "C4",  # comprehensions
  "COM",  # commas
  "TD",  # to-do
  "INT",  # gettext
  "TRY",  # tryceratops
  "TID",  # tidy imports
  "ANN",  # annotations
]
ignore = [
  "C901",  # function is too complex
  "N805",  # allow naming `self` to first class argument
  "RUF013",  # implicit optional
  "ISC001",  # allow implicit str concat
  "COM812",  # allow missing trailing comma
  "TRY003",  # allow long messages outside the exception class
  "ANN401",  # allow Any argument type
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.src]
include = [
  "driconfig",
  "tests",
]

[tool.uv]
required-version = ">=0.9.2,<1.0"
default-groups = [
  "dev",
  "ci",
  "lint",
  "test",
  "docs",
]
